ロケーション部分 > 追加

--- a/index.html
+++ b/index.html
@@ -84,26 +84,29 @@
         <!-- f-view -->
         <div class="c-contents -f-view">
             <div class="imgBox">
-                <img class="tb-pc" src="images/item/f-view.jpg"   alt="グランシア川越 | 建築条件付土地/全16区画 東武東上線「新河岸」駅利用　徒歩9～10分 土地面積36.9坪越 カースペース2台">
-                <img class="sp"    src="images/item/f-view_s.jpg" alt="グランシア川越 | 建築条件付土地/全16区画">
+                <img class="tb-pc" src="images/item/f-view_new.jpg"   alt="グランシア川越 | 建築条件付土地/全16区画 東武東上線「新河岸」駅利用　徒歩9～10分 土地面積36.9坪越 カースペース2台">
+                <img class="sp"    src="images/item/f-view_s_new.jpg" alt="グランシア川越 | 建築条件付土地/全16区画">
             </div>
         </div>
         <!-- コンテンツ -->
         <div class="c-contents -imgBg mgb10 mgb10s">
             <div class="imgBox">
                 <img class="tb-pc" src="images/pic/bg_red.jpg"   alt="模様背景">
-                <img class="sp"    src="images/pic/bg_red_s.jpg" alt="模様背景">
-                <img class="tb-pc" src="images/pic/bg_red.jpg"   alt="模様背景">
-                <img class="sp"    src="images/pic/bg_red_s.jpg" alt="模様背景">
                 <img class="tb-pc" src="images/pic/bg_redB.jpg"   alt="模様背景">
+                <img class="tb-pc" src="images/pic/bg_red.jpg"   alt="模様背景">
+                <img class="tb-pc" src="images/pic/bg_redB.jpg"   alt="模様背景">
+
+                <img class="sp"    src="images/pic/bg_red_s.jpg" alt="模様背景">
+                <img class="sp"    src="images/pic/bg_red_s.jpg" alt="模様背景">
                 <img class="sp"    src="images/pic/bg_red_s.jpg" alt="模様背景">
                 <img class="sp"    src="images/pic/bg_red_s.jpg" alt="模様背景">
             </div>
             <!-- 01.コンセプト -->
             <div id="content01" class="c-contentsBox -center -concept w1100 w100s">
                 <img class="tb-pc"     src="images/item/content01.png"  alt="現地周辺は、川越中心部の喧騒から程よく離れた穏やかなエリアで、商業施設・教育施設が徒歩圏内に揃う暮らしやすいロケーションです。">
-                <img class="sp mgb10s" src="images/item/f-btm_s.png"    alt="東武東上線「新河岸」駅利用　徒歩9～10分 土地面積36.9坪越 カースペース2台">
-                <img class="sp"        src="images/item/content01s.png" alt="現地周辺は、川越中心部の喧騒から程よく離れた穏やかなエリアで、商業施設・教育施設が徒歩圏内に揃う暮らしやすいロケーションです。">
+                <img class="sp"        src="images/item/content01s.png" alt="">
+                <!-- <img class="sp mgb10s" src="images/item/f-btm_s.png"    alt="東武東上線「新河岸」駅利用　徒歩9～10分 土地面積36.9坪越 カースペース2台">
+                <img class="sp"        src="images/item/content01s.png" alt="現地周辺は、川越中心部の喧騒から程よく離れた穏やかなエリアで、商業施設・教育施設が徒歩圏内に揃う暮らしやすいロケーションです。"> -->
             </div>
             <!-- 02.区画図 -->
             <div id="content02" class="c-contentsBox -center -kukaku w1100 w100s">
@@ -153,9 +156,52 @@
                 </li>
             </ul>
         </div>
+        <!-- 周辺環境 -->
+        <div class="c-contents mgb20 mgb20s">
+            <div class="w1100 w95s mgb10 mgb10s">
+                <img class="tb-pc" src="images/item/location-01.png"   alt="location 商業施設・教育が徒歩圏内に揃う、家族の日常に寄り添うロケーションです。">
+                <img class="sp"    src="images/item/location-01_s.png" alt="location 商業施設・教育が徒歩圏内に揃う、家族の日常に寄り添うロケーションです。">
+            </div>
+            <div class="w1100 w95s mgb10 mgb10s">
+                <img class="tb-pc" src="images/item/location-02.png"   alt="location 商業施設・教育が徒歩圏内に揃う、家族の日常に寄り添うロケーションです。">
+                <img class="sp"    src="images/item/location-02_s.png" alt="location 商業施設・教育が徒歩圏内に揃う、家族の日常に寄り添うロケーションです。">
+            </div>
+            <div class="w1100 w95s mgb10 mgb10s">
+                <img class="tb-pc" src="images/item/location-03.png"   alt="location 商業施設・教育が徒歩圏内に揃う、家族の日常に寄り添うロケーションです。">
+                <img class="sp"    src="images/item/location-03_s.png" alt="location 商業施設・教育が徒歩圏内に揃う、家族の日常に寄り添うロケーションです。">
+            </div>
+            <div class="w1100 w95s mgb10 mgb10s">
+                <img class="tb-pc" src="images/item/location-04.png"   alt="location 商業施設・教育が徒歩圏内に揃う、家族の日常に寄り添うロケーションです。">
+                <img class="sp"    src="images/item/location-04_s.png" alt="location 商業施設・教育が徒歩圏内に揃う、家族の日常に寄り添うロケーションです。">
+            </div>
+            <div class="w1100 w95s mgb10 mgb10s">
+                <img class="tb-pc" src="images/item/location-05.jpg"   alt="location 商業施設・教育が徒歩圏内に揃う、家族の日常に寄り添うロケーションです。">
+                <img class="sp"    src="images/item/location-05_s.jpg" alt="location 商業施設・教育が徒歩圏内に揃う、家族の日常に寄り添うロケーションです。">
+            </div>
+        </div>
 
-        <!-- 04.周辺環境 -->
-
+        <!-- 季節_コンテンツ -->
+        <div class="c-contents mgb10 mgb10s">
+            <div class="imgBox"><!-- 春 -->
+                <img class="tb-pc" src="images/item/season-sp.jpg"   alt="春">
+                <img class="sp"    src="images/item/season-sp_ .jpg" alt="春">
+            </div>
+            <!-- 夏 -->
+            <!-- <div class="imgBox">
+                <img class="tb-pc" src="images/item/season-sm.jpg"    alt="夏">
+                <img class="sp"    src="images/item/season-sm_s .jpg" alt="夏">
+            </div> -->
+            <!-- 秋 -->
+            <!-- <div class="imgBox">
+                <img class="tb-pc" src="images/item/season-at.jpg"    alt="秋">
+                <img class="sp"    src="images/item/season-at_s .jpg" alt="秋">
+            </div> -->
+            <!-- 冬 -->
+            <!-- <div class="imgBox">
+                <img class="tb-pc" src="images/item/season-wn.jpg"   alt="冬">
+                <img class="sp"    src="images/item/season-wn_ .jpg" alt="冬">
+            </div> -->
+        </div>
 
         <!-- スライダー（サムネイル連動） -->
         <!--　<div id="content03" class="c-contents w1100 w85s pdt5 mgb5 mgb7s">
